# patent_tool

./: .gitignore  README.md  analysis_extrator.py  batch_patent.py  gemini_process.py  patent_extract.py  pyproject.toml  results_to_csv.py  run.py  test.html  test.ipynb
